--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".Authentication"
             android:screenOrientation="portrait">
@@ -40,6 +39,7 @@
         </activity>
         <activity android:name=".ChatActivity" />
         <activity android:name=".ContactAdd" />
+        <activity android:name=".ContactList"></activity>
     </application>
 
 </manifest>
